--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
     <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
         <span>H</span>
         <span>A</span>
-        <span>L</span>
-        <span>L</span>
-        <span>O</span>
+        <span>I</span>
         <span>C</span>
         <span>A</span>
         <span>N</span>
